[package]
name = "hmac"
version = "0.2.0"
authors = ["StefanMallia <5004438+StefanMallia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { git = "https://github.com/StefanMallia/sha2", branch = "main"}
